<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_add_new_foosball_match"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etPlayerOne"/>

    <EditText
        android:id="@+id/etPlayerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:hint="@string/player_one_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toStartOf="@id/etPlayerOneScore" />

    <EditText
        android:id="@+id/etPlayerOneScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:inputType="number"
        android:hint="@string/score"
        app:layout_constraintBottom_toBottomOf="@id/etPlayerOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etPlayerOne"
        app:layout_constraintTop_toTopOf="@+id/etPlayerOne" />

    <EditText
        android:id="@+id/etPlayerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:hint="@string/player_two_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPlayerOne"
        app:layout_constraintEnd_toStartOf="@id/etPlayerTwoScore"/>

    <EditText
        android:id="@+id/etPlayerTwoScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:inputType="number"
        android:hint="@string/score"
        app:layout_constraintBottom_toBottomOf="@+id/etPlayerTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etPlayerTwo"
        app:layout_constraintTop_toTopOf="@+id/etPlayerTwo" />

    <TextView
        android:id="@+id/tvAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvCancel"
        app:layout_constraintTop_toBottomOf="@+id/etPlayerTwoScore" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvAdd"
        app:layout_constraintBottom_toBottomOf="@id/tvAdd"
        app:layout_constraintStart_toEndOf="@id/tvAdd"/>
</androidx.constraintlayout.widget.ConstraintLayout>