<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvGamesWon"/>

    <TextView
        android:id="@+id/tvGamesWon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games_won"
        app:layout_constraintStart_toEndOf="@id/tvPlayer"
        app:layout_constraintEnd_toStartOf="@id/tvGamesPlayed"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvGamesPlayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games_played"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvGamesWon"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>